// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`WebSocket Clients Integration Tests JavaScript Client Common Integration tests for JavaScript client generation generate simple client for hoppscotch echo with custom client name: README.md 1`] = `
"# Hoppscotch Echo WebSocket Client

## Overview

Undestand how to use Hoppscotch Echo WebSocket as a client. Hoppscotch Echo WebSocket server echoes back any messages sent to it. You can use this to test WebSocket connections and message flows.


- **Version:** 1.0.0
- **Server URL:** wss://echo-websocket.hoppscotch.io


## Installation

Install dependencies:

\`\`\`bash
npm install
\`\`\`


## Usage

\`\`\`javascript
const HoppscotchClient = require('./client');
const wsClient = new HoppscotchClient();

async function main() {
  try {
    await wsClient.connect();
    // use wsClient to send/receive messages
    await wsClient.close();
  } catch (error) {
    console.error('Failed to connect:', error);
  }
}

main();
\`\`\`


## API

### \`connect()\`
Establishes a WebSocket connection.

### \`registerMessageHandler(handlerFunction)\`
Registers a callback for incoming messages.

### \`registerErrorHandler(handlerFunction)\`
Registers a callback for connection errors.

### \`close()\`
Closes the WebSocket connection.


### Available Operations

#### \`sendEchoMessage(payload)\`
Send a message to the echo server.


**Example (JavaScript):**
\`\`\`javascript
client.sendEchoMessage(\\"test\\")
\`\`\`


**Example (Python):**
\`\`\`python
client.send_echo_message(\\"test\\")
\`\`\`


**Example (JavaScript):**
\`\`\`javascript
client.sendEchoMessage(true)
\`\`\`


**Example (Python):**
\`\`\`python
client.send_echo_message(true)
\`\`\`


**Example (JavaScript):**
\`\`\`javascript
client.sendEchoMessage(123)
\`\`\`


**Example (Python):**
\`\`\`python
client.send_echo_message(123)
\`\`\`


**Example (JavaScript):**
\`\`\`javascript
client.sendEchoMessage({
  \\"test\\": \\"test text\\"
})
\`\`\`


**Example (Python):**
\`\`\`python
client.send_echo_message({
  \\"test\\": \\"test text\\"
})
\`\`\`




#### \`handleTimeStampMessage(payload)\`
Receive the timestamp message sent from server every second.


**Example (JavaScript):**
\`\`\`javascript
client.handleTimeStampMessage(\\"11:13:24 GMT+0000 (Coordinated Universal Time)\\")
\`\`\`


**Example (Python):**
\`\`\`python
client.handle_time_stamp_message(\\"11:13:24 GMT+0000 (Coordinated Universal Time)\\")
\`\`\`




"
`;

exports[`WebSocket Clients Integration Tests JavaScript Client Common Integration tests for JavaScript client generation generate simple client for hoppscotch echo with custom client name: asyncapi.yaml 1`] = `
"asyncapi: 3.0.0
info:
  title: Hoppscotch Echo WebSocket Client
  version: 1.0.0
  description: >
    Undestand how to use Hoppscotch Echo WebSocket as a client.
    Hoppscotch Echo WebSocket server echoes back any messages sent to it. You can use this to test WebSocket connections and message flows.

servers:
  echoServer:
    $ref: './commons/servers.yml#/servers/echoServer'

channels:
  echo:
    $ref: './commons/channels.yml#/channels/echo'

operations:
  sendEchoMessage:
    action: send
    channel:
      $ref: '#/channels/echo'
    summary: Send a message to the echo server.
    messages:
      - $ref: '#/channels/echo/messages/echo'  

  handleTimeStampMessage:
    action: receive
    channel:
      $ref: '#/channels/echo'
    summary: Receive the timestamp message sent from server every second.
    messages:
      - $ref: '#/channels/echo/messages/timestamp' 
"
`;

exports[`WebSocket Clients Integration Tests JavaScript Client Common Integration tests for JavaScript client generation generate simple client for hoppscotch echo with custom client name: client.js 1`] = `
"//////////////////////////////////////////////////
//
// Hoppscotch Echo WebSocket Client - 1.0.0
// Protocol: wss
// Host: echo-websocket.hoppscotch.io
//
//////////////////////////////////////////////////

const WebSocket = require('ws');
const { compileSchemasByOperationId, validateMessage } = require('@asyncapi/keeper');
const path = require('path');
const asyncapiFilepath = path.resolve(__dirname, './asyncapi.yaml');
class HoppscotchClient {

  /*
    * Constructor to initialize the WebSocket client
    * @param {string} url - The WebSocket server URL. Use it if the server URL is different from the default one taken from the AsyncAPI document.
  */
  constructor(url) {
    this.url = url || 'wss://echo-websocket.hoppscotch.io';
    this.websocket = null;
    this.messageHandlers = [];
    this.errorHandlers = [];
    this.compiledSchemas = {};
    this.schemasCompiled = false;
    this.sendOperationsId = [\\"sendEchoMessage\\"];
  }

  // Method to establish a WebSocket connection
  connect() {
      return new Promise((resolve, reject) => {
          this.websocket = new WebSocket(this.url);
          // On successful connection
        this.websocket.onopen = () => {
        console.log('Connected to Hoppscotch Echo WebSocket Client server');
        resolve();
      };

          // On receiving a message
      this.websocket.onmessage = (event) => {
        if (this.messageHandlers.length > 0) {
          // Call custom message handlers
          this.messageHandlers.forEach(handler => {
            if (typeof handler === 'function') {
              this.handleMessage(event.data, handler);
            }
          });
        } else {
          // Default message logging
          console.log('Message received:', event.data);
        }
      };

          // On error first call custom error handlers, then default error behavior
      this.websocket.onerror = (error) => {
        if (this.errorHandlers.length > 0) {
          // Call custom error handlers
          this.errorHandlers.forEach(handler => handler(error));
        } else {
          // Default error behavior
          console.error('WebSocket Error:', error);
        }
        reject(error);
      };

          // On connection close
      this.websocket.onclose = () => {
        console.log('Disconnected from Hoppscotch Echo WebSocket Client server');
      };

      });
  }

  // Method to register custom message handlers
   registerMessageHandler(handler) {
    if (typeof handler === 'function') {
      this.messageHandlers.push(handler);
    } else {
      console.warn('Message handler must be a function');
    }
  }

  // Method to register custom error handlers
   registerErrorHandler(handler) {
    if (typeof handler === 'function') {
      this.errorHandlers.push(handler);
    } else {
      console.warn('Error handler must be a function');
    }
  }

  // Method to handle message with callback
   handleMessage(message, cb) {
    if (cb) cb(message);
  }

  /**
   * Initialize and compile all schemas for operations defined.
   * This should be called once after creating the client instance.
   * Subsequent calls will be ignored if schemas are already compiled.
   * 
   * @returns {Promise<void>}
   * @throws {Error} If schema compilation fails for any operation
   */
  async compileOperationSchemas() {
    if (this.schemasCompiled) {
      return;
    }

    try {
      // Compile schemas for all send operations
      for (const operationId of this.sendOperationsId) {
        this.compiledSchemas[operationId] = await compileSchemasByOperationId(asyncapiFilepath, operationId);
      }
      this.schemasCompiled = true;
      console.log('Schemas initialized successfully for operations:', this.sendOperationsId.join(', '));
    } catch (error) {
      console.error('Error initializing schemas:', error);
      this.schemasCompiled = false;
      if (error instanceof Error) {
        error.message = \`Schema compilation failed: \${error.message}\`;
        throw error;
      } else {
        throw new Error(\`Schema compilation failed: \${String(error)}\`);
      }
    }
  }

  /**
   * Sends a sendEchoMessage message over the WebSocket connection.
   * 
   * @param {Object} message - The message payload to send. Should match the schema defined in the AsyncAPI document.
   * @param {WebSocket} socket - The WebSocket connection to use.
   * @param {Array<function>} schemas - Array of compiled schema validator functions for this operation.
   * @throws {TypeError} If message cannot be stringified to JSON
   * @throws {Error} If WebSocket connection is not in OPEN state
   * @throws {Error} If message validation fails against all schemas
   */
  static sendEchoMessage(message, socket, schemas) {
    try {
      if (!schemas || schemas.length === 0) {
        socket.send(JSON.stringify(message));
        return { isValid: true }; 
      }
      const allValidationErrors = [];
      let isValid = false;
      for(const compiledSchema of schemas){
        const validationResult = validateMessage(compiledSchema, message);
        if (validationResult.isValid) {
          isValid = true;
          socket.send(JSON.stringify(message));
          break;
        } else {
          if (validationResult.validationErrors) {
            allValidationErrors.push(...validationResult.validationErrors);
          }
        }
        if (!isValid) {
          console.error('Validation errors:', JSON.stringify(allValidationErrors, null, 2));
        }
      }
    } catch (error) {
      console.error('Error sending sendEchoMessage message:', error);
    }
  }

  /**
   * Instance method version of sendEchoMessage that uses the client's own WebSocket connection.
   * Automatically compiles schemas if not already compiled.
   * 
   * @param {Object} message - The message payload to send
   * @throws {Error} If WebSocket connection is not established
   * @throws {Error} If schema compilation fails
   * @throws {Error} If message validation fails against all schemas
   */
  async sendEchoMessage(message){
    if(!this.websocket){
      throw new Error('WebSocket connection not established. Call connect() first.');
    }
    await this.compileOperationSchemas();
    const schemas = this.compiledSchemas['sendEchoMessage'];
    HoppscotchClient.sendEchoMessage(message, this.websocket, schemas);
  }

  // Method to close the WebSocket connection
   close() {
    if (this.websocket) {
        this.websocket.close();
        console.log('WebSocket connection closed.');
    }
  }
}
module.exports = HoppscotchClient;

"
`;

exports[`WebSocket Clients Integration Tests JavaScript Client Common Integration tests for JavaScript client generation generate simple client for hoppscotch echo: README.md 1`] = `
"# Hoppscotch Echo WebSocket Client

## Overview

Undestand how to use Hoppscotch Echo WebSocket as a client. Hoppscotch Echo WebSocket server echoes back any messages sent to it. You can use this to test WebSocket connections and message flows.


- **Version:** 1.0.0
- **Server URL:** wss://echo-websocket.hoppscotch.io


## Installation

Install dependencies:

\`\`\`bash
npm install
\`\`\`


## Usage

\`\`\`javascript
const HoppscotchEchoWebSocketClient = require('./client');
const wsClient = new HoppscotchEchoWebSocketClient();

async function main() {
  try {
    await wsClient.connect();
    // use wsClient to send/receive messages
    await wsClient.close();
  } catch (error) {
    console.error('Failed to connect:', error);
  }
}

main();
\`\`\`


## API

### \`connect()\`
Establishes a WebSocket connection.

### \`registerMessageHandler(handlerFunction)\`
Registers a callback for incoming messages.

### \`registerErrorHandler(handlerFunction)\`
Registers a callback for connection errors.

### \`close()\`
Closes the WebSocket connection.


### Available Operations

#### \`sendEchoMessage(payload)\`
Send a message to the echo server.


**Example (JavaScript):**
\`\`\`javascript
client.sendEchoMessage(\\"test\\")
\`\`\`


**Example (Python):**
\`\`\`python
client.send_echo_message(\\"test\\")
\`\`\`


**Example (JavaScript):**
\`\`\`javascript
client.sendEchoMessage(true)
\`\`\`


**Example (Python):**
\`\`\`python
client.send_echo_message(true)
\`\`\`


**Example (JavaScript):**
\`\`\`javascript
client.sendEchoMessage(123)
\`\`\`


**Example (Python):**
\`\`\`python
client.send_echo_message(123)
\`\`\`


**Example (JavaScript):**
\`\`\`javascript
client.sendEchoMessage({
  \\"test\\": \\"test text\\"
})
\`\`\`


**Example (Python):**
\`\`\`python
client.send_echo_message({
  \\"test\\": \\"test text\\"
})
\`\`\`




#### \`handleTimeStampMessage(payload)\`
Receive the timestamp message sent from server every second.


**Example (JavaScript):**
\`\`\`javascript
client.handleTimeStampMessage(\\"11:13:24 GMT+0000 (Coordinated Universal Time)\\")
\`\`\`


**Example (Python):**
\`\`\`python
client.handle_time_stamp_message(\\"11:13:24 GMT+0000 (Coordinated Universal Time)\\")
\`\`\`




"
`;

exports[`WebSocket Clients Integration Tests JavaScript Client Common Integration tests for JavaScript client generation generate simple client for hoppscotch echo: asyncapi.yaml 1`] = `
"asyncapi: 3.0.0
info:
  title: Hoppscotch Echo WebSocket Client
  version: 1.0.0
  description: >
    Undestand how to use Hoppscotch Echo WebSocket as a client.
    Hoppscotch Echo WebSocket server echoes back any messages sent to it. You can use this to test WebSocket connections and message flows.

servers:
  echoServer:
    $ref: './commons/servers.yml#/servers/echoServer'

channels:
  echo:
    $ref: './commons/channels.yml#/channels/echo'

operations:
  sendEchoMessage:
    action: send
    channel:
      $ref: '#/channels/echo'
    summary: Send a message to the echo server.
    messages:
      - $ref: '#/channels/echo/messages/echo'  

  handleTimeStampMessage:
    action: receive
    channel:
      $ref: '#/channels/echo'
    summary: Receive the timestamp message sent from server every second.
    messages:
      - $ref: '#/channels/echo/messages/timestamp' 
"
`;

exports[`WebSocket Clients Integration Tests JavaScript Client Common Integration tests for JavaScript client generation generate simple client for hoppscotch echo: client.js 1`] = `
"//////////////////////////////////////////////////
//
// Hoppscotch Echo WebSocket Client - 1.0.0
// Protocol: wss
// Host: echo-websocket.hoppscotch.io
//
//////////////////////////////////////////////////

const WebSocket = require('ws');
const { compileSchemasByOperationId, validateMessage } = require('@asyncapi/keeper');
const path = require('path');
const asyncapiFilepath = path.resolve(__dirname, './asyncapi.yaml');
class HoppscotchEchoWebSocketClient {

  /*
    * Constructor to initialize the WebSocket client
    * @param {string} url - The WebSocket server URL. Use it if the server URL is different from the default one taken from the AsyncAPI document.
  */
  constructor(url) {
    this.url = url || 'wss://echo-websocket.hoppscotch.io';
    this.websocket = null;
    this.messageHandlers = [];
    this.errorHandlers = [];
    this.compiledSchemas = {};
    this.schemasCompiled = false;
    this.sendOperationsId = [\\"sendEchoMessage\\"];
  }

  // Method to establish a WebSocket connection
  connect() {
      return new Promise((resolve, reject) => {
          this.websocket = new WebSocket(this.url);
          // On successful connection
        this.websocket.onopen = () => {
        console.log('Connected to Hoppscotch Echo WebSocket Client server');
        resolve();
      };

          // On receiving a message
      this.websocket.onmessage = (event) => {
        if (this.messageHandlers.length > 0) {
          // Call custom message handlers
          this.messageHandlers.forEach(handler => {
            if (typeof handler === 'function') {
              this.handleMessage(event.data, handler);
            }
          });
        } else {
          // Default message logging
          console.log('Message received:', event.data);
        }
      };

          // On error first call custom error handlers, then default error behavior
      this.websocket.onerror = (error) => {
        if (this.errorHandlers.length > 0) {
          // Call custom error handlers
          this.errorHandlers.forEach(handler => handler(error));
        } else {
          // Default error behavior
          console.error('WebSocket Error:', error);
        }
        reject(error);
      };

          // On connection close
      this.websocket.onclose = () => {
        console.log('Disconnected from Hoppscotch Echo WebSocket Client server');
      };

      });
  }

  // Method to register custom message handlers
   registerMessageHandler(handler) {
    if (typeof handler === 'function') {
      this.messageHandlers.push(handler);
    } else {
      console.warn('Message handler must be a function');
    }
  }

  // Method to register custom error handlers
   registerErrorHandler(handler) {
    if (typeof handler === 'function') {
      this.errorHandlers.push(handler);
    } else {
      console.warn('Error handler must be a function');
    }
  }

  // Method to handle message with callback
   handleMessage(message, cb) {
    if (cb) cb(message);
  }

  /**
   * Initialize and compile all schemas for operations defined.
   * This should be called once after creating the client instance.
   * Subsequent calls will be ignored if schemas are already compiled.
   * 
   * @returns {Promise<void>}
   * @throws {Error} If schema compilation fails for any operation
   */
  async compileOperationSchemas() {
    if (this.schemasCompiled) {
      return;
    }

    try {
      // Compile schemas for all send operations
      for (const operationId of this.sendOperationsId) {
        this.compiledSchemas[operationId] = await compileSchemasByOperationId(asyncapiFilepath, operationId);
      }
      this.schemasCompiled = true;
      console.log('Schemas initialized successfully for operations:', this.sendOperationsId.join(', '));
    } catch (error) {
      console.error('Error initializing schemas:', error);
      this.schemasCompiled = false;
      if (error instanceof Error) {
        error.message = \`Schema compilation failed: \${error.message}\`;
        throw error;
      } else {
        throw new Error(\`Schema compilation failed: \${String(error)}\`);
      }
    }
  }

  /**
   * Sends a sendEchoMessage message over the WebSocket connection.
   * 
   * @param {Object} message - The message payload to send. Should match the schema defined in the AsyncAPI document.
   * @param {WebSocket} socket - The WebSocket connection to use.
   * @param {Array<function>} schemas - Array of compiled schema validator functions for this operation.
   * @throws {TypeError} If message cannot be stringified to JSON
   * @throws {Error} If WebSocket connection is not in OPEN state
   * @throws {Error} If message validation fails against all schemas
   */
  static sendEchoMessage(message, socket, schemas) {
    try {
      if (!schemas || schemas.length === 0) {
        socket.send(JSON.stringify(message));
        return { isValid: true }; 
      }
      const allValidationErrors = [];
      let isValid = false;
      for(const compiledSchema of schemas){
        const validationResult = validateMessage(compiledSchema, message);
        if (validationResult.isValid) {
          isValid = true;
          socket.send(JSON.stringify(message));
          break;
        } else {
          if (validationResult.validationErrors) {
            allValidationErrors.push(...validationResult.validationErrors);
          }
        }
        if (!isValid) {
          console.error('Validation errors:', JSON.stringify(allValidationErrors, null, 2));
        }
      }
    } catch (error) {
      console.error('Error sending sendEchoMessage message:', error);
    }
  }

  /**
   * Instance method version of sendEchoMessage that uses the client's own WebSocket connection.
   * Automatically compiles schemas if not already compiled.
   * 
   * @param {Object} message - The message payload to send
   * @throws {Error} If WebSocket connection is not established
   * @throws {Error} If schema compilation fails
   * @throws {Error} If message validation fails against all schemas
   */
  async sendEchoMessage(message){
    if(!this.websocket){
      throw new Error('WebSocket connection not established. Call connect() first.');
    }
    await this.compileOperationSchemas();
    const schemas = this.compiledSchemas['sendEchoMessage'];
    HoppscotchEchoWebSocketClient.sendEchoMessage(message, this.websocket, schemas);
  }

  // Method to close the WebSocket connection
   close() {
    if (this.websocket) {
        this.websocket.close();
        console.log('WebSocket connection closed.');
    }
  }
}
module.exports = HoppscotchEchoWebSocketClient;

"
`;

exports[`WebSocket Clients Integration Tests JavaScript Client Common Integration tests for JavaScript client generation generate simple client for postman echo: README.md 1`] = `
"# Postman Echo WebSocket Client

## Overview

Understand how to use the Postman Echo WebSocket as a client. The Postman Echo WebSocket server echoes back any messages sent to it.

- **Version:** 1.0.0
- **Server URL:** wss://ws.postman-echo.com/raw


## Installation

Install dependencies:

\`\`\`bash
npm install
\`\`\`


## Usage

\`\`\`javascript
const PostmanEchoWebSocketClientClient = require('./client');
const wsClient = new PostmanEchoWebSocketClientClient();

async function main() {
  try {
    await wsClient.connect();
    // use wsClient to send/receive messages
    await wsClient.close();
  } catch (error) {
    console.error('Failed to connect:', error);
  }
}

main();
\`\`\`


## API

### \`connect()\`
Establishes a WebSocket connection.

### \`registerMessageHandler(handlerFunction)\`
Registers a callback for incoming messages.

### \`registerErrorHandler(handlerFunction)\`
Registers a callback for connection errors.

### \`close()\`
Closes the WebSocket connection.


### Available Operations

#### \`sendEchoMessage(payload)\`
Send a message to the Postman Echo server.


**Example (JavaScript):**
\`\`\`javascript
client.sendEchoMessage(\\"test\\")
\`\`\`


**Example (Python):**
\`\`\`python
client.send_echo_message(\\"test\\")
\`\`\`


**Example (JavaScript):**
\`\`\`javascript
client.sendEchoMessage({
  \\"test\\": \\"test text\\"
})
\`\`\`


**Example (Python):**
\`\`\`python
client.send_echo_message({
  \\"test\\": \\"test text\\"
})
\`\`\`




"
`;

exports[`WebSocket Clients Integration Tests JavaScript Client Common Integration tests for JavaScript client generation generate simple client for postman echo: asyncapi.yaml 1`] = `
"asyncapi: 3.0.0

info:
  title: Postman Echo WebSocket Client
  version: 1.0.0
  description: Understand how to use the Postman Echo WebSocket as a client.
    The Postman Echo WebSocket server echoes back any messages sent to it.

servers:
  echoServer:
    host: ws.postman-echo.com
    pathname: /raw
    protocol: wss

channels:
  echo:
    description: The main channel where messages are sent and echoed back by the Postman Echo WebSocket server.
    address: /
    messages:
      echo:
        $ref: '#/components/messages/echo'

operations:
  sendEchoMessage:
    summary: Send a message to the Postman Echo server.
    action: send
    channel: 
      $ref: '#/channels/echo'
    messages:
      - $ref: '#/channels/echo/messages/echo'
    reply:
      channel: 
        $ref: '#/channels/echo'

components:
  messages:
    echo:
      summary: A message exchanged with the echo server.
      payload: {}
      examples:
        - name: string
          payload: test
        - name: object
          payload: 
            test: test text"
`;

exports[`WebSocket Clients Integration Tests JavaScript Client Common Integration tests for JavaScript client generation generate simple client for postman echo: client.js 1`] = `
"//////////////////////////////////////////////////
//
// Postman Echo WebSocket Client - 1.0.0
// Protocol: wss
// Host: ws.postman-echo.com
// Path: /raw
//
//////////////////////////////////////////////////

const WebSocket = require('ws');
const { compileSchemasByOperationId, validateMessage } = require('@asyncapi/keeper');
const path = require('path');
const asyncapiFilepath = path.resolve(__dirname, './asyncapi.yaml');
class PostmanEchoWebSocketClientClient {

  /*
    * Constructor to initialize the WebSocket client
    * @param {string} url - The WebSocket server URL. Use it if the server URL is different from the default one taken from the AsyncAPI document.
  */
  constructor(url) {
    this.url = url || 'wss://ws.postman-echo.com/raw';
    this.websocket = null;
    this.messageHandlers = [];
    this.errorHandlers = [];
    this.compiledSchemas = {};
    this.schemasCompiled = false;
    this.sendOperationsId = [\\"sendEchoMessage\\"];
  }

  // Method to establish a WebSocket connection
  connect() {
      return new Promise((resolve, reject) => {
          this.websocket = new WebSocket(this.url);
          // On successful connection
        this.websocket.onopen = () => {
        console.log('Connected to Postman Echo WebSocket Client server');
        resolve();
      };

          // On receiving a message
      this.websocket.onmessage = (event) => {
        if (this.messageHandlers.length > 0) {
          // Call custom message handlers
          this.messageHandlers.forEach(handler => {
            if (typeof handler === 'function') {
              this.handleMessage(event.data, handler);
            }
          });
        } else {
          // Default message logging
          console.log('Message received:', event.data);
        }
      };

          // On error first call custom error handlers, then default error behavior
      this.websocket.onerror = (error) => {
        if (this.errorHandlers.length > 0) {
          // Call custom error handlers
          this.errorHandlers.forEach(handler => handler(error));
        } else {
          // Default error behavior
          console.error('WebSocket Error:', error);
        }
        reject(error);
      };

          // On connection close
      this.websocket.onclose = () => {
        console.log('Disconnected from Postman Echo WebSocket Client server');
      };

      });
  }

  // Method to register custom message handlers
   registerMessageHandler(handler) {
    if (typeof handler === 'function') {
      this.messageHandlers.push(handler);
    } else {
      console.warn('Message handler must be a function');
    }
  }

  // Method to register custom error handlers
   registerErrorHandler(handler) {
    if (typeof handler === 'function') {
      this.errorHandlers.push(handler);
    } else {
      console.warn('Error handler must be a function');
    }
  }

  // Method to handle message with callback
   handleMessage(message, cb) {
    if (cb) cb(message);
  }

  /**
   * Initialize and compile all schemas for operations defined.
   * This should be called once after creating the client instance.
   * Subsequent calls will be ignored if schemas are already compiled.
   * 
   * @returns {Promise<void>}
   * @throws {Error} If schema compilation fails for any operation
   */
  async compileOperationSchemas() {
    if (this.schemasCompiled) {
      return;
    }

    try {
      // Compile schemas for all send operations
      for (const operationId of this.sendOperationsId) {
        this.compiledSchemas[operationId] = await compileSchemasByOperationId(asyncapiFilepath, operationId);
      }
      this.schemasCompiled = true;
      console.log('Schemas initialized successfully for operations:', this.sendOperationsId.join(', '));
    } catch (error) {
      console.error('Error initializing schemas:', error);
      this.schemasCompiled = false;
      if (error instanceof Error) {
        error.message = \`Schema compilation failed: \${error.message}\`;
        throw error;
      } else {
        throw new Error(\`Schema compilation failed: \${String(error)}\`);
      }
    }
  }

  /**
   * Sends a sendEchoMessage message over the WebSocket connection.
   * 
   * @param {Object} message - The message payload to send. Should match the schema defined in the AsyncAPI document.
   * @param {WebSocket} socket - The WebSocket connection to use.
   * @param {Array<function>} schemas - Array of compiled schema validator functions for this operation.
   * @throws {TypeError} If message cannot be stringified to JSON
   * @throws {Error} If WebSocket connection is not in OPEN state
   * @throws {Error} If message validation fails against all schemas
   */
  static sendEchoMessage(message, socket, schemas) {
    try {
      if (!schemas || schemas.length === 0) {
        socket.send(JSON.stringify(message));
        return { isValid: true }; 
      }
      const allValidationErrors = [];
      let isValid = false;
      for(const compiledSchema of schemas){
        const validationResult = validateMessage(compiledSchema, message);
        if (validationResult.isValid) {
          isValid = true;
          socket.send(JSON.stringify(message));
          break;
        } else {
          if (validationResult.validationErrors) {
            allValidationErrors.push(...validationResult.validationErrors);
          }
        }
        if (!isValid) {
          console.error('Validation errors:', JSON.stringify(allValidationErrors, null, 2));
        }
      }
    } catch (error) {
      console.error('Error sending sendEchoMessage message:', error);
    }
  }

  /**
   * Instance method version of sendEchoMessage that uses the client's own WebSocket connection.
   * Automatically compiles schemas if not already compiled.
   * 
   * @param {Object} message - The message payload to send
   * @throws {Error} If WebSocket connection is not established
   * @throws {Error} If schema compilation fails
   * @throws {Error} If message validation fails against all schemas
   */
  async sendEchoMessage(message){
    if(!this.websocket){
      throw new Error('WebSocket connection not established. Call connect() first.');
    }
    await this.compileOperationSchemas();
    const schemas = this.compiledSchemas['sendEchoMessage'];
    PostmanEchoWebSocketClientClient.sendEchoMessage(message, this.websocket, schemas);
  }

  // Method to close the WebSocket connection
   close() {
    if (this.websocket) {
        this.websocket.close();
        console.log('WebSocket connection closed.');
    }
  }
}
module.exports = PostmanEchoWebSocketClientClient;

"
`;
